Fix video embed height to fill container
- Changed iframe height from 80% to 100%
- Removes extra gap at bottom of video

--- a/src/styles.css
+++ b/src/styles.css
@@ -663,7 +663,7 @@ a {
 
 .video-embed iframe {
   width: 100%;
-  height: 80%;
+  height: 100%;
   border: 0;
   display: block;
 }
